<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="48dp"
            app:title=" ">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop"
                app:layout_collapseMode="parallax"/>

            <ImageView
                android:id="@+id/iv_backdrop_shadow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_shadow"
                android:contentDescription="@string/backdrop_shadow"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:behavior_overlapTop="48dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_poster"
                    android:layout_width="180dp"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster"
                        tools:src="@color/yellow_700"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_language"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/card_poster"
                    app:layout_constraintStart_toEndOf="@id/card_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="8dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_language"
                            android:contentDescription="@string/language"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:text="@string/language"/>

                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            tools:text="@string/language"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_duration"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_language"
                    app:layout_constraintStart_toEndOf="@id/card_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="8dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_duration"
                            android:contentDescription="@string/duration"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:text="@string/duration"/>

                        <TextView
                            android:id="@+id/tv_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            tools:text="@string/duration" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_rating"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/card_duration"
                    app:layout_constraintStart_toEndOf="@id/card_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="8dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_star"
                            android:contentDescription="@string/rating"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:text="@string/rating"/>

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            tools:text="@string/rating"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/title"
                    app:layout_constraintTop_toBottomOf="@id/card_poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:text="@string/release_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:text="@string/genres"
                    app:layout_constraintTop_toBottomOf="@id/tv_release"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/barrier"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_genres"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/synopsis"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@android:color/tertiary_text_light"
                    tools:text="@string/overview"
                    app:layout_constraintTop_toBottomOf="@id/tv_synopsis"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:icon="@drawable/ic_favorite_border"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:strokeColor="?attr/colorPrimary"
                    app:rippleColor="@null"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/share"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview"
                    app:layout_constraintStart_toEndOf="@id/btn_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="@null"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <include
                    layout="@layout/shimmer_activity_detail"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>